Use jlink and distroless runtime to minimise docker image (140MB -> 54MB)